--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="Jane Doe">
+    <meta name="author" content="Karla Prouna">
     <meta name="description" content="Portafolio de desarrollo web de Jane Doe">
     <meta name="keywords" content="HTML, CSS, JavaScript, React">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,7 +46,7 @@
 
     <section class="hero align-items-stretch">
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/images (2).jpg" alt="Foto de Jane Doe">
+        <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/images (2).jpg" alt="Foto de Karla">
         <h1>Hola, soy karla Daniela Gomez Procuna</h1>
 
         <h2 class="text-primary mb-4" id="typewriter"></h2>
